# android-bench

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  android-bench.sh  android_snippets_1_output.txt  cla-check.md  pyproject.toml  pytest.ini
.github/workflows/: presubmit.yml  reusable-test.yml
cli/: run_benchmark.py  run_task.py
common/: config.py  constants.py  loader.py  logger.py  run_config.py  ui.py  utils.py
common/models/: __init__.py  benchmark.py  eval_data_classes.py  task.py
common/storage/: __init__.py  base.py  gcp.py  local.py
dataset/tasks/: v1_tasks.yaml
dataset/tasks/AlphaWallet__alpha-wallet-android-pr_3329/: Dockerfile  golden.patch  task.yaml  test.patch
dataset/tasks/AntennaPod__AntennaPod-pr_6838/: Dockerfile  golden.patch  task.yaml  test.patch
dataset/tasks/Automattic__pocket-casts-android-pr_1114/: Dockerfile  golden.patch  task.yaml  test.patch
dataset/tasks/Automattic__pocket-casts-android-pr_3970/: Dockerfile  golden.patch  task.yaml  test.patch
docs/: dataset.md  guide.md  task_visualizer.md  tech_report.md  tech_report_audit.md  tools.md  troubleshooting.md  viewing_results.md
harness/evaluation/: README.md  benchmark_worker.py  config.json.template  config.py  harness.py  main.py
harness/inference/: README.md  androidbench.py  androidbench.yaml  androidbench_runner.py  multimedia_processing_agent.py  pyproject.toml
results/: generate_task_html.py  stats.py  summarize_results.py  summarize_results_test.py
tests/common/: test_run_config.py
tests/dataset/: verified_tasks_test.py
tests/harness_evaluation_integration_test/: integration_test.py
tests/harness_evaluation_unit_tests/: benchmark_model_test.py  benchmark_worker_test.py  harness_test.py  main_test.py  test_harness_copy.py  test_tasks.py
tests/harness_inference_tests/: agent_infra_test.py  multimedia_agent_test.py
tests/results/: test_generate_task_html.py  test_stats.py
tests/utils/: helpers_test.py  shell_test.py  test_generate_local_docker_images.py  test_task_validator.py  test_validate_task.py  ui_test.py
utils/: auto_build_verifier.py  get-target-sdk-init-script.gradle  helpers.py  setup.py  setup_oracle_agent.py  shell.py  test-dump-init-script.gradle
utils/docker/: Dockerfile  cleanup_images.py  generate_docker_images.py  prebuild.py  requirements.txt
utils/explorer/: commands.py  data.py  generate_task_summary.py  ui.py
utils/task_validator/: task_validator.py  validate_task.py
utils/visualizer/: commands.py  data.py  ui.py
(+401 files in other folders)
